[package]
name = "mini-kv"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
# debug = true

[dependencies]
bytes = "^1"
crossbeam = "^0.8"
mio = { version = "^1.1", features = ["net", "os-poll", "os-ext"] }
nix = { version = "^0.30", default-features = false, features = ["signal"] }
nom = "^8"
slab = "^0.4"
twox-hash = { version = "^2.1", default-features = false, features = ["std", "xxhash3_64"] }
shuttle = { version = "^0.8", optional = true }

[features]
shuttle = ["dep:shuttle"]

[[bin]]
name = "kv_client"
path = "src/client/main.rs"

[[bin]]
name = "kv_server"
path = "src/server/main.rs"
