[package]
name = "mini-kv"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"

[profile.release]
# debug = true

[dependencies]
bytes = "^1"
clap_lex = "^0.7"
crc32c = "^0"
crossbeam = "^0.8"
log = "^0.4"
mio = { version = "^1.1", features = ["net", "os-poll", "os-ext"] }
nix = { version = "^0.30", default-features = false, features = ["signal"] }
nom = "^8"
simple_logger = {version = "^5", default-features = false, features = ["timestamps"]}
slab = "^0.4"
thiserror = "^2"
twox-hash = { version = "^2.1", default-features = false, features = [
    "std",
    "xxhash3_64",
] }
shuttle = { version = "^0.8", optional = true }

[features]
shuttle = ["dep:shuttle"]

[[bin]]
name = "kv_server"
path = "src/server/main.rs"
